--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -425,6 +425,7 @@ iframe {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 .banner-bg {
   padding: 260px 80px;
